force-app/main/default/objects/CanvasUser__c/CanvasUser__c.object-meta.xml
<CustomObject>
    <label>Canvas User</label>
    <nameField>
        <displayFormat>CNV-USR-{0000}</displayFormat>
        <label>Canvas User Record ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Canvas Users</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>