force-app/main/default/objects/CanvasUser__c/fields/CanvasUserId__c.field-meta.xml
<CustomField>
    <fullName>CanvasUserId__c</fullName>
    <externalId>true</externalId>
    <label>Canvas User ID</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>