force-app/main/default/objects/CanvasUser__c/fields/ConfirmationUrl__c.field-meta.xml
<CustomField>
    <fullName>ConfirmationUrl__c</fullName>
    <description>The URL that takes the user through the account confirmation process (so they can set up a password).</description>
    <label>Confirmation URL</label>
    <length>200</length>
    <type>Text</type>
</CustomField>