force-app/main/default/objects/CanvasUser__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Canvas User</relationshipLabel>
    <relationshipName>Canvas_User</relationshipName>
    <type>Lookup</type>
</CustomField>